data/collection/fixes/descriptions/kotlin/KT-12767
```
package name.that.may.be.very.long

import java.io.Serializable

interface Foo<T> : Comparable<Foo<T>>, Serializable, Cloneable

fun test(f: Foo) {}     // erroneous usage of Foo
```

Compilation results in the following message:
```
1.kt:7:13: error: one type argument expected for interface Foo<T> : Comparable<Foo<T>>, Serializable, Cloneable defined in name.that.may.be.very.long
fun test(f: Foo) {}
            ^
```

I think just mentioning the name of the class/interface and names of its type parameters would be enough.